# agent-lens

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-gate.yml
docs/: architecture.md  orchestration.md
docs/adr/: 0001-stack-and-scope.md
docs/context/: handoff.md
docs/contracts/: evaluator_protocol.md  metric.md  trace_event.md
docs/modules/: analysis.md  ci.md  dashboards.md  eval.md  exporters.md  schema.md  tracing.md
eval/: baseline_report.json
examples/: instrument_toy_agent.py  run_eval_suite.py
src/agent_lens/: __init__.py  metrics.py
src/agent_lens/analysis/: __init__.py  causal.py
src/agent_lens/ci/: __init__.py  gate.py
src/agent_lens/dashboards/: __init__.py  prometheus.py
src/agent_lens/dashboards/grafana/: agent_lens.json
src/agent_lens/eval/: __init__.py  base.py  heuristic.py  llm_judge.py
src/agent_lens/exporters/: __init__.py  langfuse.py  langsmith.py
src/agent_lens/schema/: __init__.py  eval_result.py  trace.py
src/agent_lens/tracing/: __init__.py  capture.py
tests/: test_causal.py  test_ci_gate.py  test_dashboards.py  test_exporters.py  test_heuristic_eval.py  test_llm_judge.py  test_metrics.py  test_schema_contract.py  test_tracing.py
